# fcimc

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  _r_e_a_d_m_e_8md.html  dir_2b7fab3d9362210dea1b6e7927d524e9.html  dir_2b7fab3d9362210dea1b6e7927d524e9.js  dir_2b7fab3d9362210dea1b6e7927d524e9_dep.map  dir_2b7fab3d9362210dea1b6e7927d524e9_dep.md5  dir_44da2380067dfa243703eec4d5a3414f.html  dir_44da2380067dfa243703eec4d5a3414f.js  dir_44da2380067dfa243703eec4d5a3414f_dep.map  dir_44da2380067dfa243703eec4d5a3414f_dep.md5  dir_7837fde3ab9c1fb2fc5be7b717af8d79.html  dir_7837fde3ab9c1fb2fc5be7b717af8d79.js  dir_9d95adc37effe2d0447790667f945c24.html  dir_9d95adc37effe2d0447790667f945c24.js  dir_cc5828221f209cab2d5bf2b0ee9d9c85.html  dir_cc5828221f209cab2d5bf2b0ee9d9c85.js  dir_cc5828221f209cab2d5bf2b0ee9d9c85_dep.map  dir_cc5828221f209cab2d5bf2b0ee9d9c85_dep.md5  dir_f5914bd29df15049ae416e8a0eac21ca.html  dir_f5914bd29df15049ae416e8a0eac21ca.js  dir_f5914bd29df15049ae416e8a0eac21ca_dep.map  dir_f5914bd29df15049ae416e8a0eac21ca_dep.md5  environment.yml  files.html  files_dup.js  ford.md  fortran_2calcs_2make__fig2_8py.html  fortran_2calcs_2make__fig2_8py.js  fortran_2calcs_2make__fig2_8py_source.html  fortran_2calcs_2make__fig3_8py.html  fortran_2calcs_2make__fig3_8py.js  fortran_2calcs_2make__fig3_8py_source.html  fortran_2calcs_2make__fig4_8py.html  fortran_2calcs_2make__fig4_8py.js  fortran_2calcs_2make__fig4_8py_source.html  fortran_2calcs_2make__fig5_8py.html  fortran_2calcs_2make__fig5_8py.js  (+266 more)
docs/: Doxyfile  Makefile  index.md  py_filter  test1.md  (+2 more)
(+129 files in other folders)
