[project]
name = "fcimc"
version = "0.1.0"
description = "Python and Fortran implementations of the Fleck and Cummings implicit Monte Carlo scheme."
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.13"
dependencies = [
  "ford",
  "jupyter",
  "matplotlib",
  "mkdocs",
  "mkdocs-material",
  "numpy",
]

[project.optional-dependencies]
dev = ["pre-commit"]
