[project]
name = "fcimc"
version = "0.1.0"
description = "Python and Fortran implementations of the Fleck and Cummings implicit Monte Carlo scheme."
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.13"
dependencies = [
  "jupyter",
  "matplotlib",
  "mkdocs",
  "mkdocs-material",
  "numpy",
]

[dependency-groups]
ford = ["ford"]
zensical = ["zensical>=0.0.40"]

[project.optional-dependencies]
dev = ["pre-commit"]

[tool.uv]
default-groups = ["ford"]
conflicts = [
  [
    { group = "ford" },
    { group = "zensical" },
  ],
]
